--- a/R_and_R.html
+++ b/R_and_R.html
@@ -34,7 +34,7 @@
         <!-- Left links -->
         <ul class="navbar-nav me-3">
           <li class="nav-item">
-            <a class="nav-link active d-flex align-items-center" aria-current="page" href="home.html">Home</a>
+            <a class="nav-link active d-flex align-items-center" aria-current="page" href="https://shizuri0901.github.io/JSA10-final/home.html">Home</a>
           </li>
         </ul>
         <!-- Left links -->
@@ -61,10 +61,10 @@
 
         <ul class="navbar-nav ms-3">
           <li class="nav-item me-3">
-            <a class="nav-link d-flex align-items-center" href="sign_up.html" style="width: 100px;">Sign Up</a>
+            <a class="nav-link d-flex align-items-center" href="https://shizuri0901.github.io/JSA10-final/sign_up.html" style="width: 100px;">Sign Up</a>
           </li>
           <li class="nav-item" style="width: 65px;">
-            <a class="nav-link d-flex align-items-center" href="sign_in.html" style="width: 65px;">Sign In</a>
+            <a class="nav-link d-flex align-items-center" href="https://shizuri0901.github.io/JSA10-final/sign_in.html" style="width: 65px;">Sign In</a>
           </li>
         </ul>
       </div>
