--- a/home.html
+++ b/home.html
@@ -45,11 +45,10 @@
             </button>
             <ul class="dropdown-menu dropdown-menu-dark fa-ul">
               <li>
-                <a class="dropdown-item" href="#"><span class="fa-li pe-2"><i
-                      class="fas fa-film"></i></span>Restaurants</a>
+                <a class="dropdown-item" href="#">Restaurants</a>
               </li>
               <li>
-                <a class="dropdown-item" href="#"><span class="fa-li pe-2"><i class="fas fa-tv"></i></span>Cooking recipes</a>
+                <a class="dropdown-item" href="#">Cooking recipes</a>
               </li>
             </ul>
             <input type="search" class="form-control" placeholder="Enter your city" aria-label="Search" id="search"  required/>
@@ -58,10 +57,10 @@
         </form>
         <ul class="navbar-nav ms-3" id="acc">
           <li class="nav-item d-flex" style="width: 100px;">
-            <a class="nav-link d-flex align-items-center" href="http://127.0.0.1:5501/sign_up.html">Sign Up</a>
+            <a class="nav-link d-flex align-items-center" href="https://shizuri0901.github.io/JSA10-final/sign_up.html">Sign Up</a>
           </li>
           <li class="nav-item d-flex" style="width: 65px;">
-            <a class="nav-link d-flex align-items-center" href="http://127.0.0.1:5501/sign_in.html">Sign In</a>
+            <a class="nav-link d-flex align-items-center" href="https://shizuri0901.github.io/JSA10-final/sign_in.html">Sign In</a>
           </li>
         </ul>
       </div>
