--- a/sign_in.html
+++ b/sign_in.html
@@ -32,7 +32,7 @@
         <!-- Left links -->
         <ul class="navbar-nav me-3">
           <li class="nav-item">
-            <a class="nav-link active d-flex align-items-center" aria-current="page" href="http://127.0.0.1:5501/home.html">Home</a>
+            <a class="nav-link active d-flex align-items-center" aria-current="page" href="https://shizuri0901.github.io/JSA10-final/home.html">Home</a>
           </li>
         </ul>
         <!-- Left links -->
@@ -57,10 +57,10 @@
         </form>
         <ul class="navbar-nav ms-3">
           <li class="nav-item d-flex">
-            <a class="nav-link d-flex align-items-center" href="http://127.0.0.1:5501/sign_up.html" style="width: 100px;">Sign Up</a>
+            <a class="nav-link d-flex align-items-center" href="https://shizuri0901.github.io/JSA10-final/sign_up.html" style="width: 100px;">Sign Up</a>
           </li>
           <li class="nav-item d-flex">
-            <a class="nav-link d-flex align-items-center" href="http://127.0.0.1:5501/Sign_in.html" style="width: 65px;">Sign In</a>
+            <a class="nav-link d-flex align-items-center" href="https://shizuri0901.github.io/JSA10-final/sign_in.html" style="width: 65px;">Sign In</a>
           </li>
         </ul>
       </div>
@@ -107,7 +107,7 @@
                 <button type="button" class="btn btn-primary btn-block mb-4" onclick="CheckAcc()" id="go">Sign in</button>
                 
                 <div class="text-center">
-                  <p>Not a member? <a href="sign_up.html">Register</a></p>
+                  <p>Not a member? <a href="https://shizuri0901.github.io/JSA10-final/sign_up.html">Register</a></p>
                 </div>
               </form>
             </div>
