--- a/sign_up.html
+++ b/sign_up.html
@@ -32,7 +32,7 @@
         <!-- Left links -->
         <ul class="navbar-nav me-3">
           <li class="nav-item">
-            <a class="nav-link active d-flex align-items-center" aria-current="page" href="http://127.0.0.1:5501/home.html">Home</a>
+            <a class="nav-link active d-flex align-items-center" aria-current="page" href="https://shizuri0901.github.io/JSA10-final/home.html">Home</a>
           </li>
         </ul>
         <!-- Left links -->
@@ -57,10 +57,10 @@
         </form>
         <ul class="navbar-nav ms-3">
           <li class="nav-item d-flex" style="width: 100px;">
-            <a class="nav-link d-flex align-items-center" href="http://127.0.0.1:5501/sign_up.html">Sign Up</a>
+            <a class="nav-link d-flex align-items-center" href="https://shizuri0901.github.io/JSA10-final/sign_up.html">Sign Up</a>
           </li>
           <li class="nav-item d-flex" style="width: 65px;">
-            <a class="nav-link d-flex align-items-center" href="http://127.0.0.1:5501/Sign_in.html">Sign In</a>
+            <a class="nav-link d-flex align-items-center" href="https://shizuri0901.github.io/JSA10-final/sign_in.html">Sign In</a>
           </li>
         </ul>
       </div>
